// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A-Router smoke renders at a path 1`] = `
<div
  role="group"
  style="outline: none;"
  tabindex="-1"
>
  <div>
    Dash 
  </div>
</div>
`;

exports[`A-Router smoke renders the root component at "/" 1`] = `
<div
  role="group"
  style="outline: none;"
  tabindex="-1"
>
  <div>
    Home
  </div>
</div>
`;
